<resources>
    <string name="app_name">Grouper</string>
    <string name="project_name">Enter your Project Name</string>
    <string name="back">Back</string>
    <string name="course">Enter the course, i.e. EC327</string>
    <string name="team_name">Enter your Team Name</string>
    <string name="project_deadline">Project Deadline (mm/dd/yyyy):</string>
    <string name="project_deadline_input">12/12/2018</string>
    <string name="deadline_to_form_group">Deadline to Form Group</string>
    <string name="project_description">Enter description of project</string>
    <string name="maxCapacity">Maximum Capacity:</string>
    <string name="maxCapacityInput">1</string>
    <string name="create">Create</string>
    <string name="confirmationAlert">Project Group has been successfully created.</string>
    <string name="need_a_new_account">Need a new Account?</string>
    <string name="createProjectGroup">Are you sure you would like to create the project group with these details? Please note that once created, the information cannot be changed.</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="register_user">Register User</string>
    <string name="already_registered_sign_in">Already Registered? Sign in here</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="current_projects">Current Projects</string>
    <string name="createGroup">Create Group</string>
    <string name="deleteGroupAlert">Are you sure you want to delete this project group?</string>
    <string name="deleteGroupConfirm">Project Group has been deleted.</string>
</resources>
